--- a/index.html
+++ b/index.html
@@ -7,7 +7,48 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-900 text-white antialiased">
+ <nav class="fixed top-0 left-0 right-0 z-50 bg-slate-900/60 backdrop-blur-xl border-b border-white/5">
+    <div class="max-w-7xl mx-auto px-6 h-24 flex items-center justify-between">
+        <div class="flex items-center gap-12">
+            <div class="flex items-center gap-4">
+                <img src="white.png" alt="ILYLAM Logo" class="h-12 w-auto object-contain">
+                <span class="text-3xl font-black tracking-tighter text-white">ILYLAM</span>
+            </div>
 
+            <div class="hidden lg:flex items-center gap-8 text-sm font-bold text-gray-400">
+                <a href="#systems" class="hover:text-purple-400 transition-colors">Sales Systems</a>
+                <a href="#ads" class="hover:text-purple-400 transition-colors">Smart Ads</a>
+                <a href="#ai" class="hover:text-purple-400 transition-colors">AI & Automation</a>
+            </div>
+        </div>
+
+        <a href="#contact" class="bg-white/10 hover:bg-white/20 px-6 py-2 rounded-full text-sm font-bold border border-white/10 transition-all">
+            Contact Us
+        </a>
+    </div>
+</nav>
+
+<div class="h-24"></div>
+<nav class="fixed top-0 left-0 right-0 z-50 bg-slate-900/50 backdrop-blur-xl border-b border-white/5 px-6 py-4">
+    <div class="max-w-7xl mx-auto flex items-center justify-between">
+        <div class="flex items-center gap-8">
+            <div class="flex items-center gap-3">
+                <img src="your-logo.png" alt="ILYLAM" class="w-10 h-10 object-contain">
+                <span class="text-2xl font-black tracking-tighter bg-gradient-to-r from-purple-400 to-indigo-500 bg-clip-text text-transparent">ILYLAM</span>
+            </div>
+
+            <div class="hidden md:flex items-center gap-6 text-sm font-medium text-gray-400">
+                <a href="#sales-system" class="hover:text-white transition-colors">Sales Systems</a>
+                <a href="#ads-engine" class="hover:text-white transition-colors">Smart Ads</a>
+                <a href="#ai-automation" class="hover:text-white transition-colors">AI & Automation</a>
+            </div>
+        </div>
+
+        <a href="#contact" class="bg-white/10 hover:bg-white/20 px-5 py-2 rounded-full text-sm font-bold transition-all border border-white/10">
+            Contact
+        </a>
+    </div>
+</nav>
 <main class="pt-24 pb-12 flex items-center justify-center p-6">
             <div class="max-w-4xl bg-white/5 backdrop-blur-md border border-white/10 p-12 rounded-[2rem] shadow-2xl text-center">
             <h1 class="text-6xl md:text-7xl font-black mb-6">
