--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="max-w-7xl mx-auto px-6 h-24 flex items-center justify-between">
         <div class="flex items-center gap-12">
             <div class="flex items-center gap-4">
-                <img src="white.png" alt="ILYLAM Logo" class="h-12 w-auto object-contain">
+                <img src="white.png" alt="ILYLAM" class="h-10 w-auto">
                 <span class="text-3xl font-black tracking-tighter text-white">ILYLAM</span>
             </div>
 
