--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
 </head>
 <body class="bg-slate-900 text-white antialiased">
  <nav class="fixed top-0 left-0 right-0 z-50 bg-slate-900/60 backdrop-blur-xl border-b border-white/5">
-    <div class="max-w-7xl mx-auto px-6 h-24 flex items-center justify-between">
-        <div class="flex items-center gap-12">
-            <div class="flex items-center gap-4">
+    <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
+        <div class="flex items-center gap-10">
+            <div class="flex items-center gap-3">
                 <img src="white.png" alt="ILYLAM" class="h-10 w-auto">
-                <span class="text-3xl font-black tracking-tighter text-white">ILYLAM</span>
+                <span class="text-2xl font-black tracking-tighter text-white uppercase">ILYLAM</span>
             </div>
-
-            <div class="hidden lg:flex items-center gap-8 text-sm font-bold text-gray-400">
-                <a href="#systems" class="hover:text-purple-400 transition-colors">Sales Systems</a>
-                <a href="#ads" class="hover:text-purple-400 transition-colors">Smart Ads</a>
-                <a href="#ai" class="hover:text-purple-400 transition-colors">AI & Automation</a>
+            <div class="hidden md:flex items-center gap-6 text-sm font-bold text-gray-400">
+                <a href="#services" class="hover:text-purple-400 transition-colors">Sales Systems</a>
+                <a href="#services" class="hover:text-purple-400 transition-colors">Smart Ads</a>
+                <a href="#services" class="hover:text-purple-400 transition-colors">AI & Automation</a>
             </div>
         </div>
-
         <a href="#contact" class="bg-white/10 hover:bg-white/20 px-6 py-2 rounded-full text-sm font-bold border border-white/10 transition-all">
             Contact Us
         </a>
