--- a/Desktop/ILYLAM Store/index.html
+++ b/Desktop/ILYLAM Store/index.html
@@ -4,50 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>ILYLAM | General Store</title>
+    <title>MBusiness ILYLAM</title>
 </head>
-<body class="bg-slate-950 text-white antialiased">
-
-    <nav class="fixed top-0 left-0 right-0 z-50 bg-slate-900/80 backdrop-blur-xl border-b border-white/5 h-24">
-        <div class="max-w-7xl mx-auto h-full px-8 flex items-center justify-between">
-            
-            <div class="flex items-center gap-4">
-                <img src="LOGO/white.png" alt="Logo" class="w-12 h-12 object-contain">
-                <span class="text-3xl font-black tracking-tighter bg-gradient-to-r from-purple-400 to-indigo-500 bg-clip-text text-transparent">ILYLAM</span>
+<body class="bg-slate-900 text-white antialiased">
+    <nav class="fixed top-0 left-0 right-0 z-50 bg-slate-900/50 backdrop-blur-xl border-b border-white/5 px-6 py-4">
+        <div class="max-w-7xl mx-auto flex items-center justify-between">
+            <div class="flex items-center gap-8">
+                <div class="flex items-center gap-3">
+                    <img src="LOGO/white.png" alt="ILYLAM" class="w-10 h-10 object-contain">
+                    <span class="text-2xl font-black tracking-tighter bg-gradient-to-r from-purple-400 to-indigo-500 bg-clip-text text-transparent">ILYLAM</span>
+                </div>
+                <div class="hidden md:flex items-center gap-6 text-sm font-medium text-gray-400">
+                    <a href="#sales-system" class="hover:text-white transition-colors">Sales Systems</a>
+                    <a href="#ads-engine" class="hover:text-white transition-colors">Smart Ads</a>
+                    <a href="#ai-automation" class="hover:text-white transition-colors">AI & Automation</a>
+                </div>
             </div>
-
-            <div class="hidden lg:flex items-center gap-10 text-xs font-bold uppercase tracking-widest text-gray-300">
-                <a href="#home" class="hover:text-purple-400 transition-all">Home</a>
-                <a href="#new" class="hover:text-purple-400 transition-all">New</a>
-                <a href="#product" class="hover:text-purple-400 transition-all">Product</a>
-                <a href="#services" class="hover:text-purple-400 transition-all">Our Services</a>
-                <a href="#contact" class="hover:text-purple-400 transition-all border-l border-white/10 pl-10">Contact</a>
-            </div>
-
-            <div class="lg:hidden bg-white/10 p-2 rounded-lg">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-                </svg>
-            </div>
+            <a href="#contact" class="bg-white/10 hover:bg-white/20 px-5 py-2 rounded-full text-sm font-bold transition-all border border-white/10">Contact</a>
         </div>
     </nav>
 
-    <main class="pt-48 px-8 max-w-7xl mx-auto text-center">
-        <div class="inline-block px-4 py-1.5 mb-6 rounded-full border border-purple-500/30 bg-purple-500/10 text-purple-400 text-xs font-bold tracking-widest uppercase">
-            General Store & Digital Agency
-        </div>
-        <h1 class="text-6xl md:text-8xl font-black mb-8 leading-[1.1] tracking-tight">
-            Build Your <span class="bg-gradient-to-r from-indigo-400 to-purple-500 bg-clip-text text-transparent">Future</span> With Us.
-        </h1>
-        <p class="text-xl text-gray-400 max-w-2xl mx-auto mb-12">
-            من المنتجات المختارة بعناية إلى الحلول الرقمية المبتكرة، ILYLAM هو وجهتك المتكاملة للتميز.
-        </p>
-        
-        <div class="flex flex-col sm:flex-row items-center justify-center gap-6">
-            <a href="#product" class="w-full sm:w-auto bg-indigo-600 hover:bg-indigo-700 px-12 py-5 rounded-2xl font-black transition-all shadow-2xl shadow-indigo-600/20">Shop Products</a>
-            <a href="#services" class="w-full sm:w-auto bg-white/5 hover:bg-white/10 px-12 py-5 rounded-2xl font-black border border-white/10 transition-all">Explore Services</a>
+    <main class="pt-32 pb-12 flex items-center justify-center p-6 text-center">
+        <div class="max-w-4xl bg-white/5 backdrop-blur-md border border-white/10 p-12 rounded-[2rem] shadow-2xl">
+            <h1 class="text-6xl md:text-7xl font-black mb-6">MBusiness <span class="bg-gradient-to-r from-purple-400 to-indigo-500 bg-clip-text text-transparent">ILYLAM</span></h1>
+            <p class="text-xl text-gray-400 mb-10 max-w-2xl mx-auto">Elevating brands through strategic digital marketing and innovative solutions.</p>
+            <div class="flex flex-col md:flex-row gap-4 justify-center">
+                <a href="#services" class="bg-indigo-600 hover:bg-indigo-700 px-8 py-4 rounded-xl font-bold transition-all">Explore Services</a>
+                <a href="#contact" class="bg-white/10 hover:bg-white/20 px-8 py-4 rounded-xl font-bold transition-all border border-white/10">Contact Us</a>
+            </div>
         </div>
     </main>
-
 </body>
 </html>
